FindBook/root/static/css/style.css
html,body{
    height:100%
}

div.footer{
    clear:both;
    position:relative;
    margin-top:-110px;
    width:100%;
    height:110px;
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: #f5f5f5;
    border-top: 1px solid #e5e5e5;
    font-size:12px;
}

p.ft-top{
    margin-top:20px;
}

a.friend{
    margin-left:20px;
}

.link{
    margin-left:10px;
}

div.index-form-div{
    height:240px;
    margin-top:60px;
    margin-left:auto;
    margin-right:auto;
    width:62%
}

.index-main {
    margin-top:60px;
}
.content {
    margin-top: 60px;
}

.hero-unit {
    margin-left:auto;
    margin-right:auto;
    width:38%;
}

.logo-bg {
    background:url("/static/images/logo.png") no-repeat top left;
    background-size:382px 63px;
    width: 382px;
    height: 63px;
    margin-left:auto;
    margin-right:auto;
}

.logo-bg img {
    display:block;
    margin-left: auto;
    margin-right:auto;
}

.logo-desc {
    font-size: 18px;
}

.logo-bg-ct {
    font-size: 60px;
    color: #696969;
}

div.ctrl-container{
    width:100%
}

.ct-srch-tb{
    width:90%;
    height:20px
}

.srch-btn{
    width:8%;
    height:30px
}

div.logo-background{
    background:#eee;
    padding-top:20px;
    padding-bottom:10px;
    border-bottom:#efefef;
    margin-bottom:30px;
    height:40px
}

a.search-logo{
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size:24px;
    color:#333;
    font-weight:bold;
    width:50%;
    text-decoration:none;
    position:absolute;
    display:block;
    margin-left:70px;
    margin-top:3px
}

a.aboutus-logo{
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size:24px;
    color:#333;
    font-weight:bold;
    text-decoration:none
}

div.logo-container{
    margin-left:auto;
    margin-right:auto;
    padding-top:3px;
    width:50%
}
.search-container{
    margin-bottom:100px;
}
.search-main{
    width:55%;
}
.top-form-container{
    margin-top:20px;
}

.top-form-container .top-form{
    width:100%
}

.top-form .top-tb{
    width:90%;
    height:20px
}

.top-form .top-btn{
    width:8%;
    height:30px
}

div.search-result{
    width:100%
}

div.search-item{
    margin-bottom:30px;
    word-wrap:break-word;
}

div.search-page{
    margin-top:50px
}

div.outer-wrapper{
    min-height:100%
}

div.ra-tab-list {
    margin-top: 20px;
    width: 120px;
    float: left;
}

div.ra-tab-content {
    margin-left: 50px;
    margin-top:20px;
    float: left;
    width: 250px;
}

.aboutus-main{
    margin-top:60px;
    margin-bottom:120px;
    width:50%
}

.othsg{
    width:100%
}

.btn-fdbk-submit{
    display:block;
    width:94px
}

div#thx-modal{
    left:25%;
    margin-left:-110px;
    width:220px;
    height:80px;
    border-left:0;
    border-right:0
}

button.btn-modal-close{
    font-size:12px
}

.unwrap{
    white-space:nowrap
}

.stats-kw{
    margin-bottom:50px;
    width: 100%;
}

.stats-ct{
    margin-bottom:180px;
    width: 100%;
}

.tag-add {
    margin-top: 60px;
    width: 50%;
}
.all-tags {
    margin-top: 60px;
    margin-bottom:180px;
    width:50%;
}
.remove {
    width: 12px;
    cursor: pointer;
}
.all-tags .icon-remove {
    opacity: 0.25;
}
.all-tags .icon-remove:hover {
    opacity: 1;
}
.book-add {
    margin-top:60px;
    width:50%;
}
.all-books {
    margin-top: 60px;
    margin-bottom:180px;
    width:50%;
}
.all-books .icon-remove {
    opacity: 0.25;
}
.all-books .icon-remove:hover {
    opacity: 1;
}

.book-desc{
    width:100%;
}
.error {
    margin-top:60px;
    width:50%;
}
.img-book {
    display: block;
    float: right;
    width:102px;
    height:145px;
}
.book-main{
    margin-top:20px;
    margin-bottom:150px;
    width:60%;
}
.book-breadcrumb{
    background-color:transparent;
    padding-left:0;
    padding-right:0;
}
.book-title{
    margin-top:0;
}
.pipe{
    color:#999;
    margin-left:10px;
    margin-right:10px;
    font-size:12px;
}
.book-search{
    margin-top:20px;
}
.book-search-label{
    float:left;
}
.book-search-buttons{
    float:left;
    margin-left:10px;
}
.book-desc{
    margin-top:20px;
    border-top:1px solid #e5e5e5;
    padding-top:20px;
}
.rec-main{
    margin-left:auto;
    margin-right:auto;
    margin-bottom:100px;
    width:80%;
}
.cat-sidebar {
    float:left;
    margin-top:20px;
    width:120px;
}
.cat-sidenav {
    background-color: #fff;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
    -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
    box-shadow: 0 1px 4px rgba(0,0,0,.065); 
    padding:0;
}
.cat-sidenav > li > a{
    display: block;
    margin: 0 0 -1px;
    padding: 8px 14px;
    border: 1px solid #e5e5e5;
}
.cat-sidenav > li:first-child > a{
    -webkit-border-radius: 6px 6px 0 0;
    -moz-border-radius: 6px 6px 0 0;
    border-radius: 6px 6px 0 0;
}
.cat-sidenav > li:last-child > a{
    -webkit-border-radius: 0 0 6px 6px;
    -moz-border-radius: 0 0 6px 6px;
    border-radius: 0 0 6px 6px;
}
.cat-sidenav > .active > a {
    padding: 9px 15px;
    border: 0;
}
.cat-sidenav .icon-chevron-right {
    float:right;
    margin-top:2px;
    margin-right:-6px;
    opacity:0.2;
}
.cat-sidenav a:hover .icon-chevron-right {
    opacity:0.5;
}
.cat-sidenav .active .icon-chevron-right,
.cat-sidenav .active a:hover .icon-chevron-right{
    background-image:url(/static/images/glyphicons-halflings-white.png);
    opacity:1;
}
.cat-main{
    float:left;
    width:60%;
    margin-top:20px;
    margin-left:80px;
}
.cat-label {
    font-size:20px;
    color:#888;
}
.subcat-topnav {
    margin-top:20px;
}

.subcat-content {
    clear:both;
    margin-top:10px;
    margin-left:0px;
    display:block;
}
.subcat-content > span {
    width:80px;
    height:25px;
    display:inline-block;
}
.subcat-content > span:first-child {
    margin-left:0px;
}
.subcat-content > span > a {
    text-decoration: none;
}
.subcat-content .active a,
.subcat-content .active a:hover {
    background-color:#37A;
    color:white;
}
.subcat-content a:hover {
    background-color:#EEE;
}

.subcat-main {
    clear:both;
    margin-top: 20px;
    border-top: 1px solid #E9E9E9;
}
.subcat-main > div {
    margin-top:0px;
    margin-bottom:0px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-top: 1px dashed #E9E9E9;
}
.subcat-main > div:first-child {
    border:none;
}
.media-heading a{
    color:#333;
}
.media-heading a:hover{
    color:#00AAFF;
    text-decoration:none;
}
.small {
    font-size:12px;
}
.rating50,.rating45,
.rating40,.rating35,
.rating30,.rating25,
.rating20,.rating15,
.rating10,.rating05,
.rating00{
    background:url("/static/images/rating.gif") no-repeat;
    display:inline-block;
    width:55px;
    height:11px;
    overflow:hidden;
}
.rating50{
    background-position:0 0;
}
.rating45{
    background-position:0 -11px;
}
.rating40{
    background-position:0 -22px;
}
.rating35{
    background-position:0 -33px;
}
.rating30{
    background-position:0 -44px;
}
.rating25{
    background-position:0 -55px;
}
.rating20{
    background-position:0 -66px;
}
.rating15{
    background-position:0 -77px;
}
.rating10{
    background-position:0 -88px;
}
.rating05{
    background-position:0 -99px;
}
.rating00{
    background-position:0 -110px;
}
.pic-resize {
    max-width:102px;
    width:102px;
    height:145px;
}
.rec-page {
    margin-top:20px;
}
.login-main {
    margin-top:60px;
    margin-bottom:100px;
}
.login-error {
}

@media(min-width:768px) and (max-width:1024px){
.content {
}
.hero-unit {
    width:50%;
}

.logo-bg {
    background-size:382px 63px;
    width: 382px;
    height: 63px;
}

a.search-logo{
    margin-left:35px
}

.logo-container{
    margin-left:auto;
    margin-right:auto;
    padding-top:3px;
    width:80%
}

.index-form-div{
    width:80%
}

.ct-srch-tb{
    width:90%
}

.srch-btn{
    width:8%
}

.search-main{
    width:80%;
}
.top-form-container{
    width:100%;
}

.top-form .top-tb{
    width:90%
}

.top-form .top-btn{
    width:8%
}

.aboutus-main{
    width:80%
}
div#thx-modal{
    left:50%;
}
.book-add {
    width:80%;
}
.all-books {
    width:80%;
}
.book-main{
    width:80%;
}
.error {
    margin-top:60px;
    width:80%;
}
.rec-main{
    width:90%;
}
.cat-main{
    width:70%;
    margin-left:50px;
}
}

@media(max-width:767px){
body{
    padding:0
}

.content {
}

.hero-unit {
    width:90%;
    padding-left:15px;
    padding-right:15px;
}
.logo-bg {
    background:url("/static/images/logo-small.png") no-repeat top left;
    background-size:230px 38px;
    width: 230px;
    height: 38px;
}

div.index-form-div{
    width:100%
}

div.ctrl-container{
    width:100%
}

.ct-srch-tb{
    width:85%;
}

.srch-btn{
    width:12%
}

div.logo-container{
    margin-left:auto;
    margin-right:auto;
    padding-top:3px;
    width:90%
}

.search-main{
    width:100%;
}
.top-form-container{
    width:100%;
}

.top-form .top-tb{
    width:85%
}

.top-form .top-btn{
    width:12%
}

.hero-unit h1{
    font-size:48px
}

a.search-logo{
    display:none
}

.aboutus-main{
    width:100%
}
div#thx-modal{
    left:50%;
}

button.btn-modal-close{
    font-size:10px
}
.book-add {
    width:100%;
}
.all-books {
    width:100%;
}
.img-book {
    float:none;
    margin-bottom: 20px;
}
.book-main{
    width:100%;
}
.error {
    margin-top:60px;
    width:100%;
}
.book-search-label{
    float:none;
}
.book-search-buttons{
    float:none;
    margin-top:10px;
    margin-left:0;
}
.rec-main{
    width:90%;
}
.cat-sidebar {
    width:100%;
}
.cat-main{
    width:100%;
    margin-left:0px;
}
}

